[gd_scene load_steps=13 format=3 uid="uid://bsrn64csutfk7"]

[ext_resource type="Script" path="res://scripts/menu_principalEscena.gd" id="1_fxwae"]
[ext_resource type="Texture2D" uid="uid://cfkhm71edxmfa" path="res://img/MenuPrincipalBackground.png" id="1_kfmw4"]
[ext_resource type="FontFile" uid="uid://bph7b5e80n2ph" path="res://fonts/CompassPro.otf" id="3_wld45"]
[ext_resource type="Texture2D" uid="uid://ph3paqj18706" path="res://img/yo xd.jpg" id="4_7wtin"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="5_ewh5k"]
[ext_resource type="AudioStream" uid="uid://jo48oxotar3u" path="res://sonidos/audios/type-writing-6834.mp3" id="6_coedi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0cev"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vnjx"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwrcc"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[sub_resource type="Animation" id="Animation_icvib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimacionInicio:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimacionInicio:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_36kil"]
resource_name = "animacionprevia"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimacionInicio:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimacionInicio:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hntu1"]
_data = {
"RESET": SubResource("Animation_icvib"),
"animacionprevia": SubResource("Animation_36kil")
}

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxwae")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -257.0
offset_right = 600.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kfmw4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -46.0
offset_right = 198.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wld45")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_l0cev")
text = "JUGAR"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wld45")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_2vnjx")
text = "OPCIONES"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wld45")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_gwrcc")
text = "SALIR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hntu1")
}

[node name="AnimacionInicio" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -256.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AnimacionInicio"]
layout_mode = 0
offset_top = -1.0
offset_right = 1200.0
offset_bottom = 513.0
color = Color(0, 0, 0, 1)

[node name="MiIcono" type="Sprite2D" parent="AnimacionInicio"]
position = Vector2(600, 152)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_7wtin")

[node name="LabelNombre" type="Label" parent="AnimacionInicio"]
layout_mode = 0
offset_left = 428.0
offset_top = 298.0
offset_right = 776.0
offset_bottom = 496.0
theme_override_fonts/font = ExtResource("5_ewh5k")
theme_override_font_sizes/font_size = 64
text = "Gabriel Luezas 
Presenta . . .

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimacionInicio"]
stream = ExtResource("6_coedi")

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
